adding endpoint for scrolling in group chats
